--- a/arabic_text_readability_analysis/text_analysis/static/css/style.css
+++ b/arabic_text_readability_analysis/text_analysis/static/css/style.css
@@ -1,4 +1,4 @@
-/*
+
     before start to search about any page or section make $ like ### $start home_page
 
     find ***************************** for media query code like ****** Start Media Query
@@ -49,7 +49,9 @@ section, summary, time, mark, audio, video{
     outline: none !important;
 }
 
-body{ background: #333 }
+body{ background: #8C8C8C; overflow-x: hidden; }
+
+body.scrolling_behavior{ overflow: hidden; }
 
 input, button{ outline: 0 }
 
@@ -65,11 +67,6 @@ li a{ color: inherit; }
 
 .button_hover_style:hover{ color:#fff; }
 
-.RubikMonoOne-font{ font-family: 'Rubik Mono One', sans-serif; }
-
-.Montserrat-font{ font-family: 'Montserrat', sans-serif; }
-
-
 
 @font-face {
   font-family: "Anton-Regular";
@@ -80,6 +77,13 @@ li a{ color: inherit; }
   font-family: "Cairo-Black";
   src: url("../fonts/Cairo-Black.ttf");
 }
+
+.RubikMonoOne-font{ font-family: 'Rubik Mono One', sans-serif; }
+
+.Montserrat-font{ font-family: 'Montserrat', sans-serif; }
+
+
+
 .btn.focus,
 .btn:focus {
   outline: 0;
@@ -97,6 +101,248 @@ a:focus {
 
 /*
   #################### End Main strucure style ####################
+*/
+
+/*
+  #################### $Start nav_bar section ####################
+*/
+
+
+.nav-bar #nav-icon span:nth-child(1), #nav-icon span:nth-child(2) { top: 0px; }
+
+.nav-bar #nav-icon span:nth-child(3), .nav-bar #nav-icon span:nth-child(4) { top: 18px; }
+
+.nav-bar #nav-icon span:nth-child(5), .nav-bar #nav-icon span:nth-child(6) { top: 36px; }
+
+.nav_content .ul-nav-items li a:last-child{ margin-bottom: 0 }
+
+.contact_us_page .contact_us_form .submit_contact{ margin-bottom: 50px !important }
+
+.nav_content .ul-nav-items  li  a{
+  font-size: 50px;
+  display: block;  
+}
+
+.nav-bar #nav-icon.open span:nth-child(1) {
+  left: 5px;
+  top: 7px;
+}
+
+.nav-bar #nav-icon.open span:nth-child(2) {
+  left: calc(50% - 5px);
+  top: 7px;
+}
+
+.nav-bar #nav-icon.open span:nth-child(3) {
+  left: -50%;
+  opacity: 0;
+}
+
+.nav-bar #nav-icon.open span:nth-child(4) {
+  left: 100%;
+  opacity: 0;
+}
+
+.nav-bar #nav-icon.open span:nth-child(5) {
+  left: 5px;
+  top: 29px;
+}
+
+.nav-bar #nav-icon.open span:nth-child(6) {
+  left: calc(50% - 5px);
+  top: 29px;
+}
+
+.nav-bar #nav-icon span:nth-child(even) {
+  left: 50%;
+  border-radius: 0 9px 9px 0;
+}
+
+.nav-bar #nav-icon span:nth-child(odd) {
+  left:0px;
+  border-radius: 9px 0 0 9px;
+}
+
+.nav-bar #nav-icon.open span:nth-child(1), .nav-bar #nav-icon.open span:nth-child(6) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.nav-bar #nav-icon.open span:nth-child(2), .nav-bar #nav-icon.open span:nth-child(5) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+.nav-bar #nav-icon{
+  width: 60px;
+  position: relative;
+  margin: 20px auto;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+  z-index: 99999999;
+}
+
+.nav-bar #nav-icon span {
+  display: block;
+  position: absolute;
+  height: 5px;
+  width: 50%;
+  background: #666;
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+.nav{ position: relative; }
+
+.nav #nav-icon{
+  position: relative;
+  right: 45%
+}
+
+
+.nav_content .ul-nav-items {
+  text-align: center;
+  margin-right: 40px;
+}
+
+.nav_content{
+  transition: 1s;
+  z-index: 9999;
+  position: absolute;
+  right: -100%;
+}
+
+
+.right, .left{
+  width: 0;
+  transition: 1s;
+  position: fixed;
+  top: 0;
+  z-index: 9999;
+}
+.right.right_navigate, .left.left_navigate{
+  background: #000;
+  width: 0;
+  position: fixed;
+  top: 0;
+  z-index: 9999;
+  transition: 1s;
+}
+
+.nav_content.show{
+  transition: 1s;
+  z-index: 9999;
+  position: absolute;
+  color: white;
+  top: 0;
+  display: block;
+}
+
+.nav_content .ul-nav-items li {
+  color: #fff;
+  margin-bottom: 30px;
+  transition: .5s;
+  text-align: center;
+  padding: 3px 10px;
+}
+
+/*
+  #################### End nav_bar section ####################
+*/
+
+/*
+  #################### $Start collaborative section ####################
+*/
+
+.home_page .user_input_form .submit_btns button:hover,
+.contact_us_page .contact_us_form .submit_contact:hover{
+  transform: scale(1.2,1);
+  letter-spacing: 2px;
+  background-image:  linear-gradient(to right, white , black);
+  color: #000
+}
+
+.home_page .user_input_form .submit_btns,
+.contact_us_page .contact_us_form .submit_contact{
+  width: 100%;
+  margin: auto;
+  display: block;
+  text-align: center;
+}
+
+.home_page .statics_calculations p span,
+.home_page .text_composition p span,
+.home_page .readability_gradeLevels p span,
+.home_page .readability_issues p span{
+  color: #222;
+  font-size: 16px;
+  position: absolute;
+  right: 2%;
+  font-weight: bold;
+
+}
+.home_page .nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active{
+  color: #fff;
+  background: #333;
+  box-shadow: 0px 0px 10px #555;
+  border-radius:none;
+  border:none;
+  border-top: 2px solid #fff
+}
+
+.home_page .statics_calculations p ,
+.home_page .text_composition p ,
+.home_page .readability_gradeLevels p,
+.home_page .readability_issues p{
+  color: #222;
+  padding: 5px;
+  font-size: 16px;
+  /*margin-top: 10px;*/
+  margin-bottom: 10px;
+  /*box-shadow: 0 0 5px #9f9f95;*/
+  text-align: left;
+  position: relative;
+}
+
+.about_page .about_content, 
+.about_page .about_image,
+.contact_us_page .contact_us_form,
+.contact_us_page .contact_us_map{ margin-top: 100px }
+
+.contact_us_page .contact_us_form input,
+.contact_us_page .contact_us_form textarea{
+  display: block;
+  width: 100%;
+  background: #15161a;
+  border: 2px solid #fff;
+  padding: 25px;
+  box-shadow: 0px 0px 12px #17191d;
+  color: #fff;
+  
+}
+
+
+/*
+  #################### End collaborative section ####################
 */
 
 
@@ -210,25 +456,27 @@ a:focus {
 */
 
 .home_page .user_input_form textarea{
-  box-shadow: 0px 0px 5px #282424;
+/*  box-shadow: 0px 0px 5px #282424;
   outline: none;
-  border: 1px solid #ddd;
+  border: 1px solid #ddd;*/
+  height: 300px;
+  pointer-events: auto;
+  border: none;
+  font-size: 18px;
+  white-space: pre-wrap;
+  resize: none;
+  position: relative;
+  z-index: 2;
+  box-sizing: border-box;
+  overflow: hidden;
+  max-width: 50em;
+  line-height: 2;
+  /*background: transparent;*/
+  margin: 0 auto;
+  border-radius: 0;
+  padding: 10px 20px;
 }
 
-.home_page .user_input_form .submit_btns button:hover{
-  transform: scale(1.2,1);
-  letter-spacing: 2px;
-  background-image:  linear-gradient(to right, white , black);
-  color: #000
-}
-
-
-.home_page .user_input_form .submit_btns{
-  width: 100%;
-  margin: auto;
-  display: block;
-  text-align: center;
-}
 
 .home_page  .error_input.error_message{
   padding: 5px;
@@ -286,44 +534,20 @@ a:focus {
   padding: 15px;
 }
 
-.home_page .statics_calculations p span,
-.home_page .text_composition p span,
-.home_page .readability_gradeLevels p span{
-  color: #fff;
-  position: absolute;
-  right: 2%;
-  font-weight: bold;
-}
 
 .home_page .user_input_anaysis .tab_list_content{
   position: relative;
   overflow: hidden;
-  height: 400px;
+  /*height: 400px;*/
   z-index: 999;
-  margin-top: -60px; 
+  margin-top: 0px; 
 }
 
-.home_page .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
-  color: #fff;
-  background: #333;
-  box-shadow: 0px 0px 10px #555;
-  border-radius:none;
-  border:none;
-  border-top: 2px solid #fff
-}
-
-
-.home_page .statics_calculations p ,
-.home_page .text_composition p ,
-.home_page .readability_gradeLevels p  {
-  color: #fff;
-  padding: 10px;
-  font-size: 25px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  box-shadow: 0 0 5px #9f9f95;
-  text-align: left;
-  position: relative;
+.home_page .user_input_anaysis .tab_list_content .tab-content{
+  overflow-y: scroll;
+  /*height: 300px;*/
+  width: 90%;
+  /*position: absolute;*/
 }
 
 
@@ -341,7 +565,74 @@ a:focus {
   ###################### End home_page Style  ####################
 */
 
+/*---------------------------------------------- Another Page---------------------------------------------------------*/
 
+
+/*
+  ###################### $Start about_page Style  ####################
+*/
+
+.about_content p{
+  line-height: 2;
+  font-size: 20px;
+  color: #fff;
+}
+
+.about_content h2{
+  color: #fff;
+  font-size: 35px;
+  margin-bottom: 35px;
+  font-family: "Cairo-Black";
+}
+
+/*
+  ###################### End about_page Style   ####################
+*/
+
+
+/*---------------------------------------------- Another Page---------------------------------------------------------*/
+
+
+/*
+  ###################### $Start contact_page Style  ####################
+*/
+
+
+.contact_us_page .contact_us_form label {
+  color: #fff;
+  letter-spacing: 5px;
+  font-size: 20px;
+  font-family: "Cairo-Black";
+}
+
+.contact_us_page .contact_us_form .submit_contact_error{
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+  padding: 7px;
+  box-shadow: 0 0 5px #771414;
+  font-size: 20px;
+}
+
+.contact_us_page .contact_us_form .submit_contact{
+  width: 40%;
+  color: #fff;
+  background: #000;
+  padding: 8px 15px;
+  border: none;
+  box-sizing: 0 0 11px #fff;
+  transition: .5s;
+  font-size: 20px;
+  display: block;
+  margin:auto;
+  outline: none;
+  margin-top: 50px
+}
+
+
+/*
+  ###################### End contact_page Style   ####################
+*/
 
 /* ********************************
 
@@ -407,7 +698,8 @@ a:focus {
 }
 .home_page .statics_calculations p ,
 .home_page .text_composition p ,
-.home_page .readability_gradeLevels p{
+.home_page .readability_gradeLevels p,
+.home_page .readability_issues p {
 
   padding: 5px;
   font-size: 12px;
@@ -425,3 +717,39 @@ a:focus {
 ********** End Media Query Responsive Design 
 
 ******************************************/
+
+
+
+
+.contact_us_map{
+  /*margin-right: px*/
+}
+.contact_us_map h3{
+  margin-bottom: 50px;
+  font-size: 30px;
+  color: #fff;
+  letter-spacing: 5px;
+  font-family: "Cairo-Black";
+}
+
+
+
+
+.non_percentage{
+  margin-right: 60px
+}
+
+.nav-bar{
+  margin-bottom: 70px;
+  background: #efefef;
+  /*position: relative;*/
+  height: 80px;
+}
+
+.head_section{
+  color: #222
+  padding: 10px 5px 15px;
+  margin: 0 10px 5px;
+  /*border-bottom: 1px solid #ccc;*/
+  border-radius: 0;
+}
